2009-01-08  Matias De la Puente  <mfpuente.ar@gmail.com>

	* watray/watraydocumentspanel.vala:
	
	Fix remove_view method due to compiler update
	
2009-01-07  Matias De la Puente  <mfpuente.ar@gmail.com>

	* watray/watrayprojectspanel.vala:
	* watray/watraymainwindow.vala:
	
	Added title and body to the projects panel.
	Update the toggle option on the view menu when the panel hides.
	
2009-01-07  Matias De la Puente  <mfpuente.ar@gmail.com>

	* watray/watrayprojectspanelitem.vala:
	* watray/watrayprojectspanel.vala:
	* watray/watraypluginmanager.vala:
	* watray/watrayplugininfo.vala:
	* watray/watrayprojectspanelinterface.vala:
	* watray/watraymainwindow.vala:
	* watray/watraydocumentspanelview.vala:
	* watray/watraymainwindowinterface.vala:
	* watray/watrayplugin.vala:
	* watray/watrayplugininterface.vala:
	* watray/watraydocumentspanel.vala:
	* watray/watraydocumentspanelinterface.vala:
	* watraysimple/simpleplugin.vala:
	* watraysimple/simpledocumentmanager.vala:
	* watraysimple/simpledocumentview.vala:
	
	Added LGPL license
	
	* watray/watraymainwindow.vala:
	
	Start support for show/hide projects panel
	
	* ui/ui.xml:
	
	Added view menu
	
2009-01-06  Matias De la Puente  <mfpuente.ar@gmail.com>

	* watraysimple/simpledocumentmanager.vala
	* watraysimple/simpleplugin.vala
	* po/es_AR.po
	* po/POTFILES.skip
	* po/POTFILES.in
	
	Added internationalization support for simpleplugin
	
2009-01-05  Matias De la Puente  <mfpuente.ar@gmail.com>

	* README:
	
	Add README file
	
2009-01-05  Matias De la Puente  <mfpuente.ar@gmail.com>

	Initial import
	