@@ -22,7 +22,4 @@
 
 public interface Watray.IProjectsPanel : GLib.Object
 {
-	public signal void item_selected (ProjectsPanelItem item);
-	public signal void item_activated (ProjectsPanelItem item);
-	public signal void item_removed (ProjectsPanelItem item);
 }
