@@ -1,6 +1,6 @@
-/* watrayprojectspanelitem.vala
+/* watrayprojectspanelproject.vala
  *
- * Copyright (C) 2008-2009  Matias De la Puente
+ * Copyright (C) 2009  Matias De la Puente
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -20,37 +20,8 @@
  * 	Matias De la Puente <mfpuente.ar@gmail.com>
  */
 
-public class Watray.ProjectsPanelItem: GLib.Object
+public class Watray.ProjectsPanelProject: GLib.Object
 {
-	private List<ProjectsPanelItem> childs = new List<ProjectsPanelItem> ();
 
-	public ProjectsPanelItem parent { construct; get; }
-	public string text { set; get; }
-	public string icon { set; get; }
-	public string data { set; get; }
 	
-	public ProjectsPanelItem (ProjectsPanelItem parent)
-	{
-		this.parent = parent;
-	}
-	
-	public void add (ProjectsPanelItem item)
-	{
-		this.childs.append (item);
-	}
-	
-	public void remove (ProjectsPanelItem item)
-	{
-		this.childs.remove (item);
-	}
-	
-	public void clear ()
-	{
-		this.childs = new List<ProjectsPanelItem> ();
-	}
-	
-	public List<weak ProjectsPanelItem> get_childs ()
-	{
-		return this.childs.copy ();
-	}
 }
